--- a/package.json
+++ b/package.json
@@ -1,27 +1,16 @@
 {
-  "name": "nuxt",
-  "version": "1.0.0",
-  "description": "Nuxt.js project",
-  "author": "Tomás Leiva <tomas.leivad@gmail.com>",
-  "private": true,
   "dependencies": {
-    "nuxt": "latest"
+    "cosmicjs": "^2.36.0",
+    "nuxt": "^0.9.6",
+    "yarn": "^0.19.1"
   },
   "scripts": {
-    "dev": "nuxt",
+    "dev": "NODE_ENV=development nuxt",
     "build": "nuxt build",
     "start": "npm run build; NODE_ENV=production HOST=0.0.0.0 nuxt start",
-    "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "dev": "npm run build; nuxt start"
   },
-  "devDependencies": {
-    "babel-eslint": "^7.1.1",
-    "eslint": "^3.15.0",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-loader": "^1.6.1",
-    "eslint-plugin-html": "^2.0.0",
-    "eslint-plugin-promise": "^3.4.1",
-    "eslint-plugin-standard": "^2.0.1"
+  "engines": {
+    "node": "7.4.0"
   }
 }
