--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,7 @@
 env: flex
 runtime: nodejs
 handlers:
-- http_headers:
+- url: /
+  static_dir: /.*
+  http_headers:
     Access-Control-Allow-Origin: http://localhost:8080
